@@ -2,6 +2,7 @@
 v2.0-git
 --------
 
+[mjr] Add pref to allow explicitly turning off the new ajax uploader.
 [mjr] Fix invalid image type errors when uploading in older versions of
       mozilla.
 [mjr] Fix issue with deleting galleries in date mode with key images (Bug
